--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
         <a data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-left: 10px;" title="CV" class="github"><i class="bi bi-book"></i></a>
       </div>
 
-
-
     </div>
   </header>
 
@@ -80,7 +78,9 @@
             <div class="modal-body">
               <embed src="assets/cv/CV Moh. Fiqih Erinsyah.pdf" frameborder="0" width="100%" height="400px">
             </div>
-            
+             <div class="modal-footer">
+              <a href="assets/cv/CV Moh. Fiqih Erinsyah.pdf" style="color: black;">Download CV</a>
+            </div>
           </div>
         </div>
       </div>
