--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    Designed by Moh. Fiqih Erinsyah</a>
+    by Moh. Fiqih Erinsyah</a>
   </div>
 
   <!-- Vendor JS Files -->
