--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <p><em>Prodi Teknik Informatika, Politeknik Harapan Bersama</em></p>
             <p>
             <ul>
-              <li>Dosen Part time Prodi TI PHB</li>
+              <li>Dosen Praktisi Prodi S.Tr. Teknik Informatika PHB</li>
               <li>Mengampu Mata Kuliah Matematika Numerik (Pemrograman Numerik)</li>
             </ul>
             </p>
