--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <p>
             <ul>
               <li>Dosen Praktisi Prodi S.Tr. Teknik Informatika PHB</li>
-              <li>Mengampu Mata Kuliah Matematika Numerik (Pemrograman Numerik)</li>
+              <li>Mengampu Mata Kuliah Matematika Numerik (Pemrograman Python)</li>
             </ul>
             </p>
           </div>
