--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <embed src="assets/cv/CV Moh. Fiqih Erinsyah.pdf" frameborder="0" width="100%" height="400px">
             </div>
              <div class="modal-footer">
-              <a href="assets/cv/CV Moh. Fiqih Erinsyah.pdf" style="color: black;">Download CV</a>
+              <a href="https://drive.google.com/file/d/1yoLKm1u-6fYOUZieC7qdZ3LTBPaOubSL/view?usp=sharing" style="color: black;">Lihat CV</a>
             </div>
           </div>
         </div>
