--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <embed src="assets/cv/CV Moh. Fiqih Erinsyah.pdf" frameborder="0" width="100%" height="400px">
             </div>
              <div class="modal-footer">
-              <a href="https://drive.google.com/file/d/1JAwEf3znhuTW0iBsa74tf0BnbDTDAhjB/view?usp=sharing" style="color: black;background-color: green;">Lihat CV</a>
+              <a href="https://drive.google.com/file/d/1JAwEf3znhuTW0iBsa74tf0BnbDTDAhjB/view?usp=sharing" style="color: white;background-color: green;">Lihat CV</a>
             </div>
           </div>
         </div>
