--- a/index.html
+++ b/index.html
@@ -402,6 +402,21 @@
             </p>
           </div>
           <div class="resume-item">
+            <h4>Full Stack Developer</h4>
+            <h5>2020 - Now</h5>
+            <p><em>Central Java</em></p>
+            <p>
+            <ul>
+              <li>Backend: PHP, Python, Javascript, Java, C, C++, C#, Dart, Go, NodeJS, ExpressJs, JQuery, Ajax, API, Machine & Deep Learning</li>
+              <li>Frontend: HTML & CSS, Bootstrap, Flutter, JQuery</li>
+              <li>Framework: CodeIgniter, Laravel, Flask, Djang, Native, Odoo</li>
+              <li>Mobile: Flutter, Java</li>
+              <li>Database: MySQL, SQL, MongoDB, NoSQL, Xampp, Laragon</li>
+              <li>Platform: Git, Github, Postman, VSCode, Figma</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
             <h4>IT Consultant | Fitechno Solution</h4>
             <h5>2020 - Now</h5>
             <p><em>Central Java | My Company</em></p>
