--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 Juni</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><p>mohfiqih.github.io/personal-website</p></span></li>
+<!--                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 Juni</span></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62896-7713-8599</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Brebes, Central Java</span></li>
               </ul>
@@ -118,7 +117,7 @@
                 
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>S.Tr.Kom.</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mohfiqiherinsyah@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Work:</strong> <span>Lecturer, Web Developer</span></li>
               </ul>
             </div>
           </div>
