--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <embed src="assets/cv/CV Moh. Fiqih Erinsyah.pdf" frameborder="0" width="100%" height="400px">
+              <embed src="https://drive.google.com/file/d/14H21hGKNJ1Pdk5xEW7CYVEjslm4JDpfj/view?usp=sharing" frameborder="0" width="100%" height="400px">
             </div>
              <div class="modal-footer">
-              <a href="https://drive.google.com/file/d/1JAwEf3znhuTW0iBsa74tf0BnbDTDAhjB/view?usp=sharing" style="color: black;">Lihat CV</a>
+              <a href="https://drive.google.com/file/d/14H21hGKNJ1Pdk5xEW7CYVEjslm4JDpfj/view?usp=sharing" style="color: black;">Lihat CV</a>
             </div>
           </div>
         </div>
@@ -490,16 +490,16 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-trophy"></i></div>
-            <h4><a href="">JUARA 1</a></h4>
-            <p>Capstone Project (Semester 5) - Project Gabungan</p>
+            <h4><a href="">TERBAIK 1</a></h4>
+            <p>Capstone Project (Semester 5)</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-trophy"></i></div>
-            <h4><a href="">JUARA 1</a></h4>
-            <p>Capstone Project (Semester 6) - Project Gabungan</p>
+            <h4><a href="">TERBAIK 1</a></h4>
+            <p>Capstone Project (Semester 6)</p>
           </div>
         </div>
 
