--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <embed src="https://drive.google.com/file/d/14H21hGKNJ1Pdk5xEW7CYVEjslm4JDpfj/view?usp=sharing" frameborder="0" width="100%" height="400px">
+              <embed src="assets/cv/Moh. Fiqih Erinsyah_CV Terbaru.pdf" frameborder="0" width="100%" height="400px">
             </div>
              <div class="modal-footer">
               <a href="https://drive.google.com/file/d/14H21hGKNJ1Pdk5xEW7CYVEjslm4JDpfj/view?usp=sharing" style="color: black;">Lihat CV</a>
@@ -491,7 +491,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bi bi-trophy"></i></div>
             <h4><a href="">TERBAIK 1</a></h4>
-            <p>Capstone Project (Semester 5)</p>
+            <p>Capstone Project (Semester 5) Program Studi Teknik Informatika</p>
           </div>
         </div>
 
@@ -499,7 +499,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bi bi-trophy"></i></div>
             <h4><a href="">TERBAIK 1</a></h4>
-            <p>Capstone Project (Semester 6)</p>
+            <p>Capstone Project (Semester 6) Program Studi Teknik Informatika</p>
           </div>
         </div>
 
