--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
 
       <h1><a href="index.html">Moh. Fiqih Erinsyah</a></h1>
-      <h2>I'm a  <span>Fullstack Developer</span> | Graphic Design | UI/UX | Lecturer</h2>
+      <h2>I'm a  <span>Fullstack Developer</span> | Flutter | UI/UX & Design | Lecturer</h2>
       <!-- <p style="margin-top: 15px;">mohfiqiherinsyah@gmail.com | +6289677138599 | Central Java</p> -->
 
       <nav id="navbar" class="navbar">
