--- a/index.html
+++ b/index.html
@@ -486,12 +486,11 @@
             <p>Lomba Karya Tulis Ilmiah Nasional 2023 (Universitas Brawijaya)</p>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bi bi-trophy"></i></div>
             <h4><a href="">TERBAIK 1</a></h4>
-            <p>Capstone Project (Semester 5) Program Studi Teknik Informatika</p>
+            <p>Capstone Project (Semester 5) Program Studi DIV Teknik Informatika</p>
           </div>
         </div>
 
@@ -499,7 +498,33 @@
           <div class="icon-box">
             <div class="icon"><i class="bi bi-trophy"></i></div>
             <h4><a href="">TERBAIK 1</a></h4>
-            <p>Capstone Project (Semester 6) Program Studi Teknik Informatika</p>
+            <p>Capstone Project (Semester 6) Program Studi DIV Teknik Informatika</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="icon-box">
+            <div class="icon"><i class="bi bi-trophy"></i></div>
+            <h4><a href="">Finalis</a></h4>
+            <p>Finalis Lomba Website (Blog) Universitas Parahyangan</p>
+          </div>
+        </div>
+
+         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bi bi-trophy"></i></div>
+            <h4><a href="">TERBAIK 4</a></h4>
+            <p>4 Besar Lulusan Terbaik Program Studi DIII Teknik Komputer</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bi bi-trophy"></i></div>
+            <h4><a href="">Finalis</a></h4>
+            <p>Finalis Lomba Krenova Kota Tegal 2023</p>
           </div>
         </div>
 
@@ -576,6 +601,40 @@
                 - API Flask Python <br/>
                 - Bootstrap, HTML, CSS, JS"><i class="bi bi-info"></i></a>
                 <!-- <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portofolio/portofolio-10.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Website Fit Work PT Mayasari Bakti</h4>
+              <p>Website</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portofolio/portofolio-10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                title="About Project Simolang<br/><br/>
+                - PHP Native <br/>
+                - Bootstrap, HTML, CSS, JS"><i class="bi bi-info"></i></a>
+              
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portofolio/portofolio-9.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Personal Website</h4>
+              <p>Website</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portofolio/portofolio-9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                title="About Project Simolang<br/><br/>
+                - PHP Native <br/>
+                - Bootstrap, HTML, CSS, JS"><i class="bi bi-info"></i></a>
+              
               </div>
             </div>
           </div>
