--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <embed src="assets/cv/Moh. Fiqih Erinsyah_CV Terbaru.pdf" frameborder="0" width="100%" height="400px">
+              <embed src="assets/cv/Moh. Fiqih Erinsyah Baru.pdf" frameborder="0" width="100%" height="400px">
             </div>
              <div class="modal-footer">
-              <a href="https://drive.google.com/file/d/14H21hGKNJ1Pdk5xEW7CYVEjslm4JDpfj/view?usp=sharing" style="color: black;">Lihat CV</a>
+              <a href="https://drive.google.com/file/d/1_E_f7__G31SWc6XEBHgVb-l1n3qZF-dW/view?usp=sharing" style="color: black;">Lihat CV</a>
             </div>
           </div>
         </div>
