--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
 
       <h1><a href="index.html">Moh. Fiqih Erinsyah</a></h1>
-      <h2>I'm a  <span>Fullstack Developer</span> | Flutter | UI/UX & Design | Lecturer</h2>
+      <h2>I'm a  <span>Fullstack Developer</span> | Lecturer</h2>
       <!-- <p style="margin-top: 15px;">mohfiqiherinsyah@gmail.com | +6289677138599 | Central Java</p> -->
 
       <nav id="navbar" class="navbar">
@@ -112,7 +112,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>I'm a  <span>Fullstack Developer</span> | Flutter | UI/UX & Design | Lecturer</h3>
+          <h3>I'm a  <span>Fullstack Developer</span> | Lecturer</h3>
           <p class="" style="text-align: justify;">
             Saya Moh. Fiqih Erinsyah lulusan dari Program Studi Sarjana Terapan Teknik Informatika di Politeknik Harapan Bersama (S.Tr.Kom.), saya lulus Sarjana Terapan dengan IPK 3,92. Saya telah berpengalaman dibidang Web Developer selama 4 tahun. Saya memiliki ketertarikan didunia IT semenjak saya menduduki bangku perkuliahan Diploma III Teknik Komputer hingga sekarang saya menyelesaikan alih jenjang sarjana. Saya memiliki skill dibidang Full Stack Development, Web Development, Mobile Programming, Machine Learning, Flutter, dan lainnya. Bahasa pemrograman yang dikuasi adalah Python, Javascript, PHP dan bahasa lainnya yang selalu welcome dan selalu explore, dan selalu mempelajari banyak Framework.
           </p>
