--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>I'm a  <span>Fullstack Developer</span> | Lecturer</h3>
           <p class="" style="text-align: justify;">
-            Saya Moh. Fiqih Erinsyah lulusan dari Program Studi Sarjana Terapan Teknik Informatika di Politeknik Harapan Bersama (S.Tr.Kom.), saya lulus Sarjana Terapan dengan IPK 3,92. Saya telah berpengalaman dibidang Web Developer selama 4 tahun. Saya memiliki ketertarikan didunia IT semenjak saya menduduki bangku perkuliahan Diploma III Teknik Komputer hingga sekarang saya menyelesaikan alih jenjang sarjana. Saya memiliki skill dibidang Full Stack Development, Web Development, Mobile Programming, Machine Learning, Flutter, dan lainnya. Bahasa pemrograman yang dikuasi adalah Python, Javascript, PHP dan bahasa lainnya yang selalu welcome dan selalu explore, dan selalu mempelajari banyak Framework.
+            Saya merupakan lulusan dari Program Studi Sarjana Terapan Teknik Informatika di Politeknik Harapan Bersama, saya lulus dengan IPK 3,92 Predikat Cumlaude. Saya telah berpengalaman dan mahir diberbagai bidang Fullstack Developer, Web Developer, Backend Developer, Flutter, Machine Learning, UI/UX dan Design selama 4 tahun hingga sekarang saya bergelut dibidang IT. Saya memiliki banyak skill development dan bahasa pemrograman yang dikuasai. Saya berharap selalu konsisten dalam bekerja di Bidang IT.
           </p>
           <div class="row">
             <div class="col-lg-6">
