--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Website 
-MohMohMohMohMohMohMohMohMohMohMohMohMohMohMohMoh. Fiqih Erinsyah</title>
+  <title>Personal Website Moh. Fiqih Erinsyah</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -76,10 +75,10 @@ MohMohMohMohMohMohMohMohMohMohMohMohMohMohMohMoh. Fiqih Erinsyah</title>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <embed src="assets/CV Moh. Fiqih Erinsyah_Baru.pdf" frameborder="0" width="100%" height="400px">
+              <embed src="assets/cv/CV Moh. Fiqih Erinsyah.pdf" frameborder="0" width="100%" height="400px">
             </div>
              <div class="modal-footer">
-              <a href="https://drive.google.com/file/d/1_E_f7__G31SWc6XEBHgVb-l1n3qZF-dW/view?usp=sharing" style="color: black;">Lihat CV</a>
+              <a href="https://drive.google.com/file/d/1D1psJtOYwRY36iyZgi9Lo8k2yTyiPUMt/view?usp=sharing" style="color: black;">Lihat CV</a>
             </div>
           </div>
         </div>
