--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="70" data-purecounter-duration="1" class="purecounter"></span>
             <p>Clients</p>
           </div>
         </div>
@@ -380,23 +380,23 @@
             <h4>Sarjana Terapan Teknik Informatika</h4>
             <h4>Politeknik Harapan Bersama</h4>
             <h5>2022 - 2023</h5>
-            <p><em>IPK 3,92 Cumlaude (S.Tr.Kom.)</em></p>
-            <p>Saya menempuh alih jenjang ke Sarjana Terapan selama 1 Tahun di Politeknik Harapan Bersama Program Studi Sarjana Terapan Teknik Informatika.</p>
+            <p>IPK 3,92 Cumlaude (S.Tr.Kom.)</p>
+            <!-- <p>Saya menempuh alih jenjang ke Sarjana Terapan selama 1 Tahun di Politeknik Harapan Bersama Program Studi Sarjana Terapan Teknik Informatika.</p> -->
           </div>
 
           <div class="resume-item">
             <h4>DIII Teknik Komputer</h4>
             <h4>Politeknik Harapan Bersama</h4>
             <h5>2019 - 2022</h5>
-            <p><em>IPK 3,92 Cumlaude (A.Md.T.)</em></p>
-            <p>Saya menempuh pendidikan Perguruan Tinggi Pertama di Politeknik Harapan Bersama dengan Program Studi DIII Teknik Komputer. Saya lulus tahun 2022.</p>
+            <p>IPK 3,92 Cumlaude (A.Md.T.)</p>
+            <!-- <p>Saya menempuh pendidikan Perguruan Tinggi Pertama di Politeknik Harapan Bersama dengan Program Studi DIII Teknik Komputer. Saya lulus tahun 2022.</p> -->
           </div>
           
           <div class="resume-item">
             <h4>SMA Negeri 1 Bulakamba</h4>
             <h5>2016 - 2019</h5>
-            <p><em>Jurusan MIPA</em></p>
-            <p>Saya menempuh pendidikan SMA sejak tahun 2016 di SMAN 1 Bulakamba</p>
+            <p>Jurusan MIPA</p>
+            <!-- <p>Saya menempuh pendidikan SMA sejak tahun 2016 di SMAN 1 Bulakamba</p> -->
           </div>
 
           <div class="resume-item">
@@ -419,7 +419,7 @@
           <div class="resume-item">
             <h4>Dosen Praktisi</h4>
             <h5>2023 - Now</h5>
-            <p><em>Politeknik Harapan Bersama Kota Tegal</em></p>
+            <p>Politeknik Harapan Bersama, Kota Tegal | Paruh Waktu</p>
             <p>
             <ul>
               <li>Dosen Praktisi Prodi S.Tr. Teknik Informatika</li>
@@ -433,63 +433,60 @@
           <div class="resume-item">
             <h4>Full Stack Developer</h4>
             <h5>2020 - Now</h5>
-            <p><em>Tegal, Central Java</em></p>
+            <p>Personal Company Fitechno Solution, Tegal | Wiraswasta</p>
             <p>
             <ul>
+              <li>IT Consultant (Membuka konsultasi project dan pembuatan project IT)</li>
+              <li>Pembuatan Jasa Pembuatan Website, Aplikasi Mobile dan AI (Kecerdasan Buatan)</li>
+              <li>Pembuatan Jasa Desain Grafis & UI/UX</li>
               <li>Backend: PHP, Python, Javascript, Java, C, C++, C#, Dart, Go, NodeJS, ExpressJs, JQuery, Ajax, API, Machine & Deep Learning</li>
               <li>Frontend: HTML & CSS, Bootstrap, Flutter, JQuery</li>
               <li>Framework: CodeIgniter, Laravel, Flask, Djang, Native, Odoo</li>
               <li>Mobile: Flutter, Java</li>
               <li>Database: MySQL, SQL, MongoDB, NoSQL, Xampp, Laragon</li>
               <li>Platform: Git, Github, Postman, VSCode, Figma</li>
-            </ul>
-            </p>
-          </div>
-          <div class="resume-item">
-            <h4>IT Consultant | Fitechno Solution</h4>
-            <h5>2020 - Now</h5>
-            <p><em>Central Java | Personal Company</em></p>
-            <p>
-            <ul>
-              <li>Jasa Pembuatan Website</li>
-              <li>Jasa Pembuatan Desain Grafis & UI/UX</li>
-              <li>Jasa Pembuatan Mobile App Flutter</li>
-              <li>Jasa Pembuatan AI Machine Learning</li>
+              <li>etc</li>
+              <a href="#portfolio"><h5>Portofolio</h5></a>
             </ul>
             </p>
           </div>
 
           <div class="resume-item">
-            <h4>Faltech Digital Innovation | Company Tegal</h4>
+            <h4>Design & UI/UX</h4>
             <h5>2020 - 2021</h5>
-            <p><em>Tegal, Central Java</em></p>
+            <p>Faltech Digital Innovation, Tegal | Paruh Waktu</p>
             <p>
             <ul>
-              <li>Sebagai Frontend Developer</li>
-              <li>Sebagai Desain Grafis & UI/UX</li>
+              <li>Frontend Developer</li>
+              <li>Graphic Design & UI/UX</li>
+              <li>Create UI/UX Web Faltech Digital Innovation</li>
             </ul>
             </p>
           </div>
 
           <div class="resume-item">
-            <h4>Bidang TIK PHB | Magang</h4>
+            <h4>Fullstack Developer</h4>
             <h5>2020 - 2021</h5>
-            <p><em>Kota Tegal, Central Java</em></p>
+            <p>Bidang TIK Politeknik Harapan Bersama Kota Tegal | Paruh Waktu</p>
             <p>
             <ul>
               <li>Sebagai Fullstack Developer</li>
               <li>Sebagai Desain Grafis & UI/UX</li>
+              <li>Database Maintenance</li>
+              <li>Create Project TodoIT</li>
             </ul>
             </p>
           </div>
 
           <div class="resume-item">
-            <h4>Tegal Learning Center | Volunteer IT</h4>
+            <h4></h4>
             <h5>2020 - 2021</h5>
-            <p><em>Kota Tegal, Central Java</em></p>
+            <p>Tegal Learning Center, Kota Tegal | Paruh Waktu</p>
             <p>
             <ul>
-              <li>Sebagai Fullstack Developer</li>
+              <li>Sebagai Fullstack Web Developer</li>
+              <li>Altifis Bidang IT TLC</li>
+              <li>Create Project Blog TLC</li>
             </ul>
             </p>
           </div>
