--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
 
       <h1><a href="index.html">Moh. Fiqih Erinsyah</a></h1>
-      <h2>I'm a  <span>Fullstack Developer</span> | Lecturer</h2>
+      <h2>I'm a  <span>Fullstack Developer</span> | Software Developer | Lecturer</h2>
       <!-- <p style="margin-top: 15px;">mohfiqiherinsyah@gmail.com | +6289677138599 | Central Java</p> -->
 
       <nav id="navbar" class="navbar">
@@ -112,7 +112,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>I'm a  <span>Fullstack Developer</span> | Lecturer</h3>
+          <h3>I'm a  <span>Fullstack Developer</span> | Software Developer | Lecturer</h3>
           <p class="" style="text-align: justify;">
             Saya merupakan lulusan dari Program Studi Sarjana Terapan Teknik Informatika di Politeknik Harapan Bersama, saya lulus dengan IPK 3,92 Predikat Cumlaude. Saya telah berpengalaman dan mahir diberbagai bidang Fullstack Developer, Web Developer, Backend Developer, Flutter, Machine Learning, UI/UX dan Design selama 4 tahun hingga sekarang saya bergelut dibidang IT. Saya memiliki banyak skill development dan bahasa pemrograman yang dikuasai. Saya berharap selalu konsisten dalam bekerja di Bidang IT.
           </p>
