--- a/index.html
+++ b/index.html
@@ -414,6 +414,23 @@
           </div>
         
         </div>
+
+        <div class="col-lg-6">
+          <h3 class="resume-title">Experience</h3>
+          <div class="resume-item">
+            <h4>Software Developer & IT Leader</h4>
+            <h5>2023 - Now</h5>
+            <p>LPK Amanah Citra Cemerlang (ACC), Tegal | Remote & Onsite</p>
+            <p>LPK Garuda Mestakung Indonesia (GMI), Tegal | Remote & Onsite</p>
+            <p>
+            <ul>
+              <li>Software Developer (Website & Mobile)</li>
+              <li>Maintenance Sistem</li>
+              <li>IT Leader ACC & GMI</li>
+            </ul>
+            </p>
+          </div>
+          
         <div class="col-lg-6">
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
