--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
             <h4>Software Developer & IT Leader</h4>
-            <h5>2023 - Now</h5>
+            <h5>2024 - Now</h5>
             <p>LPK Amanah Citra Cemerlang (ACC), Tegal | Remote & Onsite</p>
             <p>LPK Garuda Mestakung Indonesia (GMI), Tegal | Remote & Onsite</p>
             <p>
@@ -436,14 +436,13 @@
           <div class="resume-item">
             <h4>Dosen Praktisi</h4>
             <h5>2023 - Now</h5>
-            <p>Politeknik Harapan Bersama, Kota Tegal | Paruh Waktu</p>
+            <p>Politeknik Harapan Bersama, Kota Tegal | Praktisi</p>
             <p>
             <ul>
               <li>Dosen Praktisi Prodi S.Tr. Teknik Informatika</li>
               <li>Dosen Praktisi Prodi DIII Teknik Komputer</li>
-              <li>Pemrograman Numerik (Python)</li>
-              <li>Pemrograman Web (PHP)</li>
-              <li>Pemrograman Sistem Cerdas 2 (Python)</li>
+              <li>Pemrograman Numerik & Aljabar Linier (Python)</li>
+              <li>Pemrograman Web (Laravel, PHP)</li>
             </ul>
             </p>
           </div>
